recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value longueur
  avance(longueur)
         ^Tree:11: error: not found: value longueur
  recule(longueur)
         ^