recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  avance(longueur)
  droite(angle)
  if (steps>1){
    tree(steps-1,length*shrink,angle,shrink)
  }
  gauche(angle)
  if (steps>1){
    tree(steps-1,length*shrink,angle,shrink)
  }
  recule(longueur)
}